test/compilable/imports/test7327a.d
void foo(short) {}
void bar() {}
void buz() {}
