test/fail_compilation/fail328.d

void bar();

@safe void foo()
{
    bar();
}
